<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/showAll"
        android:title="@string/showAll"
        app:showAsAction="never"/>

    <item
        android:id="@+id/showCompleted"
        android:title="@string/showCompleted"
        app:showAsAction="never"/>

    <item
        android:id="@+id/showPending"
        android:title="@string/showPending"
        app:showAsAction="never"/>

    <item
        android:id="@+id/sortByTime"
        android:title="@string/sortByTime"
        app:showAsAction="never"/>

    <item
        android:id="@+id/sortByPriority"
        android:title="@string/sortByPriority"
        app:showAsAction="never"/>

</menu>